# pymxsrs

./: .gitmodules  Cargo.toml  README.md
pymxsrs/: Cargo.toml
pymxsrs/src/: lib.rs  windmodel.rs
pytests/: .gitignore  Makefile  test.py  test_with_wind.py
